Fri Jan 15 20:20:20 2016  Naohisa Goto  <ngotogenome@gmail.com>

	* regint.h (PLATFORM_UNALIGNED_WORD_ACCESS): The value of
	  UNALIGNED_WORD_ACCESS should be used to determine whether
	  unaligned word access is allowed or not. After this commit,
	  ./configure CPPFLAGS="-DUNALIGNED_WORD_ACCESS=0" disables
	  unaligned word access even on platforms that support the feature.

Fri Jan 15 16:12:10 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (string1): reset heredoc indent fore each string leteral
	  so that concatenated string would not be dedented.
	  [ruby-core:72857] [Bug #11990]

Thu Jan 14 20:01:00 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/generic.rb (URI::Generic#to_s): change encoding to
	  UTF-8 as Ruby 2.2/ by Koichi ITO <koic.ito@gmail.com>
	  https://github.com/ruby/ruby/pull/1188 fix GH-1188

Thu Jan 14 17:36:16 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* variable.c (rb_f_global_variables): add matched back references
	  only, as well as defiend? operator.

Thu Jan 14 16:12:09 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* sprintf.c (rb_str_format): format exact number more exactly.

Thu Jan 14 15:08:43 2016  Tony Arcieri  <bascule@gmail.com>

	* Remove 512-bit DH group. It's affected by LogJam Attack.
	  https://weakdh.org/
	  [fix GH-1196][Bug #11968][ruby-core:72766]

Thu Jan 14 11:44:29 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* variable.c (rb_f_global_variables): add $1..$9 only if $~ is
	  set.  fix the condition removed at r14014.

Wed Jan 13 17:21:45 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* .travis.yml: removed commented-out code.

Wed Jan 13 17:14:54 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* .travis.yml: removed osx code. follow up with r53517

Wed Jan 13 16:56:19 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* iseq.c (rb_iseq_mark): mark parent iseq to prevent dynamically
	  generated iseq by eval from GC.  [ruby-core:72620] [Bug #11928]

Wed Jan 13 03:42:58 2016  Eric Wong  <e@80x24.org>
